<?php die() ?>
ContactUs 4.1.3
================================================================================
~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
~ Block uninstallation of child extensions

ContactUs 4.1.2
================================================================================
+ Reintroduce multiple email addresses per category
~ Replace Joomla's keepalive with a custom implementation (gh-21)

ContactUs 4.1.1
================================================================================
# [LOW] Wrong grammatical case (nominative instead of genitive) in months in some languages e.g. Greek

ContactUs 4.1.0
================================================================================
+ Minimum Joomla 4.2, PHP 7.4
- Removed PHP version warnings
~ Save and Save & Close buttons are now separate, as per Joomla 4.2 UI guidelines

ContactUs 4.0.5
================================================================================
# [HIGH] Add button in Categories page does nothing

ContactUs 4.0.4
================================================================================
+ Added custom module positions in the contact form
+ Add Show Inline Help support in component options for Joomla 4.1
# [HIGH] Immediate exception on Windows
# [HIGH] Unpublished contact categories can be selected in the frontend

ContactUs 4.0.3
================================================================================
# [LOW] PHP 8.1 Deprecated Notice in the Router

ContactUs 4.0.2
================================================================================
# [LOW] PHP Warning from the TriggerEvent mixin

ContactUs 4.0.1
================================================================================
# [HIGH] yet another last minute, undocumented, backwards incompatible change in Joomla is breaking things.

ContactUs 4.0.0
================================================================================
~ Rewritten with Joomla 4 core MVC
